Current:
	- wxWidgets 3.0 is now a mandatory requirement
	- Various bugfixes
	- Loads of stability and performance fixes
	- Export of animations to pdf (via a pdfTeX file run) and html
	- Adjustable framerate for animations
	- A version-control friendly flavour of the wxmx format
	- A mimetype marker at the beginning of wxmx files
	- Better desktop integration
	- An offline manual
	- Autodetection of maxima's working directory on Mac and Windows
	- Use gnuplot_postamble instead of gnuplot_preamble
	- Dropped the hard dependency of TeXinfo
	- Translation updates
	- LaTeX: Use centered dots for multiplications
	- LaTeX: Added an option to select if superscripts should be
	  placed above or after subscripts