@@ -157,6 +157,7 @@ private:
 protected:
   // begin wxGlade: Config::attributes
   wxTextCtrl* m_maximaProgram;
+  wxTextCtrl* m_texPreamble;
   wxButton* m_mpBrowse;
   wxTextCtrl* m_additionalParameters;
   wxComboBox* m_language;
